# simple

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  aaa.json  check.csv  check.txt  clippy.txt  cold_optical_data.json  filename.spl  remove_600.json  tests.sh
air/: Cargo.toml
air/src/: air_model.rs  eplus.rs  lib.rs  resolvers.rs
air/tests/: sim_eplus.sh  validate_infiltration.rs
air/tests/design_flow_rate/: eplusout.csv  in.idf
air/tests/effective_air_leakage/: eplusout.csv  in.idf
calendar/: Cargo.toml  README.md
calendar/src/: date.rs  date_factory.rs  lib.rs  period.rs
communication/: Cargo.toml  README.md
communication/src/: lib.rs
communication/tests/: integrate.rs
geometry/: CHANGELOG.md  Cargo.toml  README.md
geometry/benches/: benchmark.rs
geometry/src/: bbox3d.rs  cylinder3d.rs  disk3d.rs  distant_source3d.rs  intersection.rs  lib.rs  loop3d.rs  plane3d.rs  point3d.rs  polygon3d.rs  quick_inverse_sqrt.rs  ray3d.rs  round_error.rs  segment3d.rs  sphere3d.rs  transform.rs  triangle3d.rs  triangulation3d.rs  utils.rs  vector3d.rs
heat/: Cargo.toml  README.md
heat/benches/: my_benchmark.rs
heat/src/: cavity.rs  convection.rs  discretization.rs  gas.rs  glazing.rs  heat_model.rs  heating_cooling.rs  lib.rs  luminaire.rs  surface.rs  surface_trait.rs  zone.rs
heat/tests/: validate_convection.rs  validate_wall_heat_transfer.rs
heat/tests/massive_full/: in.idf
light/: Cargo.toml
light/src/: lib.rs  optical_info.rs  solar_model.rs  solar_surface.rs
light/tests/: validate_ir_radiation.rs  validate_solar_radiation.rs
matrix/: Cargo.toml  README.md  clippy.txt
matrix/benches/: generic_matrix_bench.rs  prod_n_diag.rs
matrix/src/: generic_matrix.rs  lib.rs  matrix.rs  n_diag_generic_matrix.rs  n_diag_matrix.rs  test.rs  traits.rs
model/: CHANGELOG.md  Cargo.toml  README.md
model/docs/: index.html
model/docs/ioreference/: book.toml
model/docs/ioreference/book/html/: 404.html  auto-boundary.html  auto-gas.html  (+27 more)
model/docs/rustdoc/: .rustc_info.json
model/docs/rustdoc/doc/: search-index.js  settings.html  source-files.js
model/src/: boundary.rs  building.rs  construction.rs  error_msgs.rs  fenestration.rs  infiltration.rs  lib.rs  luminaire.rs  material.rs  model.rs  rhai_api.rs  scanner.rs  simulation_options.rs  simulation_state.rs  simulation_state_element.rs  site_details.rs  space.rs  surface.rs  surface_trait.rs
model/src/hvac/: electric_heater.rs  ideal_heater_cooler.rs  mod.rs
model/src/objects/: chair.rs  mod.rs  sofa.rs  storage.rs  table.rs
model/src/substance/: gas.rs  mod.rs  normal.rs
model/tests/: box.spl  box_with_window.spl  cold_wellington_apartment.spl
model/tests/scanner/: boundary.spl  building.json  building.spl  fenestration.json  fenestration.spl  fenestration_type.json  gas_specification.json  gas_xenon.json  hvac_ideal_heater_cooler.json  hvac_ideal_heater_cooler.spl  ideal_heater_cooler.json  shelter_class.json  site_details.json  site_details.spl  substance_gas.json  substance_gas.spl  surface.spl  surface_type.json  surface_type_2.json
rendering/: Cargo.toml  README.md
rendering/benches/: benchmark.rs
rendering/docs/: index.html
rendering/docs/validation/: ray_tracer.html
rendering/src/: bvh.rs  colour.rs  colour_matrix.rs  daylight_coefficients.rs  from_obj.rs  from_radiance.rs  from_simple_model.rs  image.rs  interaction.rs  lib.rs  lights.rs  primitive.rs  primitive_samplers.rs  rand.rs  ray.rs  ray_tracer.rs  samplers.rs  scene.rs  triangle.rs
rendering/src/backward_metropolis/: backward_metropolis.rs  mod.rs  mutation.rs  path.rs
rendering/src/camera/: camera_trait.rs  film.rs  mod.rs  pinhole.rs  sample.rs  view.rs
rendering/src/colourmap/: inferno.rs  magma.rs  mod.rs  plasma.rs  radiance.rs  viridis.rs
rendering/src/material/: bsdf_sample.rs  dielectric.rs  diffuse.rs  glass.rs  light.rs  local_coordinates_utils.rs  mat_trait.rs  metal.rs  mirror.rs  mod.rs  plastic.rs  specular.rs  ward.rs
rendering/src/triangle/: fallback.rs  mod.rs  neon.rs
rendering/tests/: cornell_solid.oct  points.pts  render_materials.rs  sim_radiance.sh  test_scenes.rs  validate_dc.rs  validate_ray_tracer.rs
rendering/tests/dc/room/: direct_results_glass.txt  direct_results_no_glass.txt  global_results_glass.txt  global_results_no_glass.txt  room.rad  scene.rad  windows.rad
rendering/tests/ray_tracer/glass_box/: box.rad  direct_results.txt
rendering/tests/ray_tracer/metal_box_diffuse/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/metal_box_full/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/metal_box_rough/: box.rad  global_results.txt
rendering/tests/ray_tracer/metal_box_specular/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/plastic_box_diffuse/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/plastic_box_full/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/plastic_box_rough/: box.rad  direct_results.txt  global_results.txt
rendering/tests/ray_tracer/plastic_box_specular/: box.rad  direct_results.txt  global_results.txt
rendering/tests/scenes/: cornell.rad  cornell_glass.rad  cornell_rad.fc.hdr  cornell_solid.rad  octree  room.rad  room.spl  scene0.rad  sensors.pts
solar/: Cargo.toml  README.md
solar/src/: lib.rs  perez.rs  reinhart_sky.rs
solar/test_data/: solar_no_sky.txt  solar_with_sun.txt
test_models/: Cargo.toml  README.md
test_models/src/: lib.rs
weather/: Cargo.toml  LICENSE.md  README.md
weather/docs/validation/: validation.html
weather/src/: current_weather.rs  epw_scanner.rs  epw_weather.rs  epw_weather_line.rs  lib.rs  location.rs  synthetic_weather.rs
weather/src/epw/: ground_temperature.rs  mod.rs  scanner.rs  weather.rs  weather_line.rs
weather/src/solar/: mod.rs  perez.rs  reinhart_sky.rs
weather/test_data/: barcelona.epw  gen_sky_func_tests.rb  solar_no_sun.txt  visible_no_sky.txt  visible_no_sun.txt  visible_with_sun.txt
weather/tests/: eplusout.csv  go_through.rs  in.idf
(+394 files in other folders)
