
[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "air",
    "calendar",
    "communication",
    "geometry",
    "heat",
    "light",
    "matrix",
    "model",
    "polynomial",
    "rendering",
    "schedule",
    "test_models",
    "weather",
    "derive",
]


[profile.release]
debug = true
lto = true
codegen-units = 1

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./katex.html",
]

[lib]
name = "simple"
path = "src/lib.rs"

[[bin]]
name = "simple"
path = "bin/simple.rs"


[[bin]]
name = "spict"
path = "bin/spict.rs"

[[bin]]
name = "sfluxmtx"
path = "bin/sfluxmtx.rs"


[[bin]]
name = "sfalsecolor"
path = "bin/sfalsecolor.rs"

[[bin]]
name = "scompare"
path = "bin/scompare.rs"


[[examples]]
name = "box"
path = "examples/box/main.rs"

[workspace.dependencies]
rayon = { version = "1.8.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1" }
rhai = { version = "1.16.3" }
json5 = { version = "0.4" }
rand = { version = "0.8.5" }

[dependencies]
rhai = { workspace = true }
rayon = { workspace = true, optional = true }
serde_json = { workspace = true }
clap = "4.4.7"

model = { path = "model" }
communication = { path = "communication" }
calendar = { path = "calendar", features = ["chrono", "serde"] }
weather = { path = "weather" }
air = { path = "air" }
light = { path = "light" }
heat = { path = "heat" }
rendering = { path = "rendering" }
geometry = { path = "geometry" }
polynomial = { path = "polynomial" }
schedule = { path = "schedule" }

[dev-dependencies]
validate = { git = "https://github.com/germolinal/validate" }


[features]
default = []

simd = [
    "light/simd"
]

parallel = [
    "rayon",
    # "heat/parallel", 
    "light/parallel",
    #"air_flow/parallel"
]

float = [
    "calendar/float",
    "communication/float",

    "air/float",
    "heat/float",
    "light/float",

    "model/float",
    "weather/float",

]


wasm = ["model/wasm"]
