[package]
name = "communication"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
weather = { path = "../weather" }
calendar = { path = "../calendar" }

[features]
default = []
float = []