[package]
name = "solar"
version = "0.1.0"
authors = ["germolinal <germolinal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { path = "../geometry" }
calendar = { path = "../calendar" }
matrix = { path = "../matrix" }
weather = {path = "../weather" }

[dev-dependencies]


[features]
default = []
float = [
    "weather/float", 
    "geometry/float", 
    "calendar/float", 
    "matrix/float",
]