[package]
name = "test_models"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = {path = "../geometry"}
schedule = { path = "../schedule" }
model = { path = "../model" }



[features]
default = []
float = ["model/float", "geometry/float"]

