[package]
name = "weather"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar = { path = "../calendar" }
schedule = { path = "../schedule" }
serde = {version="1", features=["derive"]}

[dev-dependencies]
validate = {git="https://github.com/SIMPLE-BuildingSimulation/validate"}
serde_json="1"


[features]
default = []
float = ["calendar/float"]