[package]
name = "weather"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar = { path = "../calendar", features = ["serde"] }
schedule = { path = "../schedule" }
geometry = { path = "../geometry" }
matrix = {path="../matrix"}
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
validate = { git = "https://github.com/germolinal/validate" }
serde_json = { workspace = true }


[features]
default = []
float = [
    "calendar/float", 
    "geometry/float",
    "matrix/float",
]
